--- a/index-amp.html
+++ b/index-amp.html
@@ -80,13 +80,30 @@
                             <div class="travel__origin">
                                 <label>
                                     <span>Informe sua origem</span>
-                                    <input name="inptorigin" id="inptorigin" tabindex="2" type="text" required="" placeholder="Cidade ou aeroporto" maxlength="500">
+                                    <input name="inptorigin" id="inptorigin" tabindex="2"
+                                     type="text" required="" placeholder="Cidade ou aeroporto" on="
+                                     input-debounced:
+                                       AMP.setState({
+                                         query: event.value,
+                                         showDropdown: event.value,
+                                       }),
+                                       autosuggest-list.show;
+                                     tap:
+                                       AMP.setState({
+                                         query: query == null ? '' : query,
+                                         showDropdown: 'true'
+                                       }),
+                                       autosuggest-list.show"
+                                   [value]="query || ''"
+                                   value=""
+                                   required
+                                   autocomplete="off" />
                                 </label>
                                 <div class="suggest">
                                     <div class="autosuggest-container hidden" [class]="(showDropdown && query) ?
                                         'autosuggest-container' :
                                         'autosuggest-container hidden'">
-                                        <amp-list class="autosuggest-box" layout="fixed-height" height="120" src="/resources/api/autocompletelite" [src]="query ?
+                                        <amp-list class="autosuggest-box" layout="fixed-height" height="120" src="/resources/api/autocompletelite/" [src]="query ?
                                             autosuggest.endpoint + query :
                                             autosuggest.emptyAndInitialTemplateJson" id="autosuggest-list">
                                             <template type="amp-mustache">
@@ -98,7 +115,8 @@
                                                     }),
                                                     autosuggest-list.hide">
                                                     {{#results}}
-                                                    <div class="select-option no-outline" role="option" tabindex="0" on="tap:autosuggest-list.hide" option="{{.}}">{{.}}</div>
+                                                    <div class="select-option no-outline" role="option" 
+                                                    tabindex="0" on="tap:autosuggest-list.hide" option="{{.}}">{{.}}</div>
                                                     {{/results}} {{^results}}
                                                     <div class="select-option {{#query}}empty{{/query}}">
                                                         {{#query}}Sorry! We don't ship to your city 😰{{/query}}
